--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -12,11 +12,12 @@ published: true
 
 (eq 2.12):
 
-$$
-\Pr \left( Y = j | X = x_0 \right) = \frac{1}{K} \Sigma_{i \in N_o} I \left( y_i = j \right)
-$$
+$$\Pr \left( Y = j | X = x_0 \right) = \frac{1}{K} \Sigma_{i \in N_o} I \left( y_i = j \right)$$
 
 
 유클리디언 Distance: 가장 기본적
 
 Manhattn Distance: 빌딩 사이를 피해간다고 생각하고 모든 x들 사이의 차이와 모든 y들 사이의 차이를 더함
+
+
+$$a^2 + b^2 = c^2$$
