--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -32,11 +32,12 @@ $$\Pr \left( Y = j | X = x_0 \right) = \frac{1}{K} \Sigma_{i \in N_o} I \left( y
 
 두 관측치 사이의 거리를 구하는 방법(Distance Metric)은 여러가지입니다.
 
-Euclidean Distance  
+**Euclidean Distance**  
 가장 기본적인 거리 계산법입니다.
 
-Manhattn Distance  
+**Manhattn Distance**  
 빌딩 사이를 피해간다고 생각하고 모든 x들 사이의 차이와 모든 y들 사이의 차이를 더하는 방법입니다.
+
 
 KNN은 training data로부터 식별 함수를 학습하는 대신 데이터를 기억하는 방식을 사용합니다. 따라서 학습 과정동안 비용이 들지 않는 lazy learning 이라고 합니다.
 
