--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -26,6 +26,8 @@ KNN 방법론은 사실 매우 간단한 분류 방법론입니다. 분류classi
 
 $$\Pr \left( Y = j | X = x_0 \right) = \frac{1}{K} \Sigma_{i \in N_o} I \left( y_i = j \right)$$
 
+$N_0$: $K$ points in the training data that are closest to $x_0$
+
 몇 가지 논의가 남아있습니다.
 
 통계적 방법론 가운데 K 가 앞에 나오는 것들은(K-means, K-익명성 등) 대부분 사전에 정의된 K (pre-defined K) 를 씁니다.  KNN 역시 이 방법론 만으로는 가장 적절한 K를 찾을 수 없습니다.
