--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -130,7 +130,7 @@ print(metrics.accuracy_score(y_test, pred))
 
 ## Cross validation
 
-다음 코드를 실행하면 K 값의 변화에 따라 에러가 어떻게 변화하는지 알 수 있습니다.
+다음 코드를 실행하면 K 값의 변화에 따라 에러가 어떻게 변화하는지 그래프를 통해 알 수 있습니다.
 
 ```python
 from sklearn.model_selection import cross_val_score
