--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -11,7 +11,7 @@ published: true
 # 알고리즘
 
 다음 자료를 참고하였습니다:  
-James, et. al. "An Introduction to Statistical Learning with Application in R" (이하 ISLR)
+- James, et. al. "An Introduction to Statistical Learning with Application in R" (이하 ISLR)
 
 KNN 방법론은 사실 매우 간단한 분류 방법론입니다.
 
