--- a/_posts/2017-06-27-SVM.md
+++ b/_posts/2017-06-27-SVM.md
@@ -36,7 +36,7 @@ $$
 (ISLR eq 9.4):
 
 $$
-\beta_0 + \beta_1 X_1 + \beta_2 X_2 + ... + \beta_p X_p > 0
+\beta_0 + \beta_1 X_1 + \beta_2 X_2 + ... + \beta_p X_p < 0
 $$
 
 ## Maximal Margin Classifier
