--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -2,6 +2,9 @@
 layout: post  
 title: KNN (K-Nearest Neighbor)  
 date: 2017-06-25  
+category:
+- Data Analysis  
+
 tags: [KNN, supervised, classification, python]  
 published: true  
 ---
