--- a/_posts/2017-06-26-LDA.md
+++ b/_posts/2017-06-26-LDA.md
@@ -2,6 +2,9 @@
 layout: post  
 title: LDA (Linear Discriminant Analysis)  
 date: 2017-06-26  
+category:
+- Data Analysis  
+
 tags: [supervised, classification, demension reduction]  
 published: true  
 ---
