--- a/_posts/2017-06-27-SVM.md
+++ b/_posts/2017-06-27-SVM.md
@@ -2,6 +2,9 @@
 layout: post  
 title: SVM (Support Vector Machine)  
 date: 2017-06-26  
+category:
+- Data Analysis  
+
 tags: [supervised, classification]  
 published: true  
 ---
