--- a/_posts/2017-06-27-SVM.md
+++ b/_posts/2017-06-27-SVM.md
@@ -198,3 +198,131 @@ $$
 $$
 K \left( x_i, x_{i'} \right) = \exp \left( - \gamma  \Sigma_{j=1}^p  \left( x_{ij} - x_{i'j} \right)^2 \right)
 $$
+
+
+# SVM in Python by using scikit-learn
+
+## Hyperplane
+
+두 그룹으로 나뉘는 샘플을 랜덤하게 생성하고, 이를 hyperplane 으로 나누는 예제입니다.
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+from sklearn import svm
+%matplotlib inline
+
+# we create 40 separable points
+np.random.seed(0)
+X = np.r_[np.random.randn(20, 2) - [2, 2], np.random.randn(20, 2) + [2, 2]]
+Y = [0] * 20 + [1] * 20
+
+# fit the model
+clf = svm.SVC(kernel='linear')
+clf.fit(X, Y)
+
+# get the separating hyperplane
+w = clf.coef_[0]
+a = -w[0] / w[1]
+xx = np.linspace(-5, 5)
+yy = a * xx - (clf.intercept_[0]) / w[1]
+
+# yy = (-w[0] / w[1]) * xx - (clf.intercept_[0]) / w[1]
+# w[1]*yy = -w[0]*xx - clf.intercept_[0]
+# clf.intercept_[0] + w[0]*xx + w[1]*yy = 0
+# equivalent to \beta_0 + \beta_1 * x_1 + \beta_2 * x_2 = 0
+
+# plot the parallels to the separating hyperplane that pass through the
+# support vectors
+b = clf.support_vectors_[0]
+yy_down = a * xx + (b[1] - a * b[0])
+b = clf.support_vectors_[-1]
+yy_up = a * xx + (b[1] - a * b[0])
+
+# plot the line, the points, and the nearest vectors to the plane
+plt.plot(xx, yy, 'k-')
+plt.plot(xx, yy_down, 'k--')
+plt.plot(xx, yy_up, 'k--')
+
+plt.scatter(clf.support_vectors_[:, 0], clf.support_vectors_[:, 1],
+            s=80, facecolors='none')
+plt.scatter(X[:, 0], X[:, 1], c=Y, cmap=plt.cm.Paired)
+
+plt.axis('tight')
+```
+
+## SVM
+
+Iris 데이터를 사용합니다. 그래프로 표현하기 위하여 4가지 features 중 2가지 features 만 사용하였습니다. 예측 정확도 테스트를 위하여 train set 과 test set 으로 나누었습니다.
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+from sklearn import svm, datasets
+from sklearn.model_selection import train_test_split
+
+iris = datasets.load_iris()
+X = iris.data[:, :2]
+y = iris.target
+
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)
+```
+
+SVM 을 실행합니다. kernel 함수를 지정할 수 있습니다.
+
+```python
+# %matplotlib inline # jupyter notebook 인 경우 uncomment 합니다.
+
+h = .02
+C = 1.0
+
+svc      = svm.SVC(kernel='linear', C=C).fit(X_train, y_train)
+rbf_svc  = svm.SVC(kernel='rbf', gamma=0.7, C=C).fit(X_train, y_train)
+poly_svc = svm.SVC(kernel='poly', degree=3, C=C).fit(X_train, y_train)
+lin_svc  = svm.LinearSVC(C=C).fit(X_train, y_train)
+```
+
+데이터와 함께 예측된 구역을 나눕니다.
+
+```python
+x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1
+y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1
+xx, yy = np.meshgrid(np.arange(x_min, x_max, h),
+                     np.arange(y_min, y_max, h))
+
+# title for the plots
+titles = ['SVC with linear kernel',
+          'LinearSVC (linear kernel)',
+          'SVC with RBF kernel',
+          'SVC with polynomial (degree 3) kernel']
+
+
+for i, clf in enumerate((svc, lin_svc, rbf_svc, poly_svc)):
+    plt.subplot(2, 2, i + 1)
+    plt.subplots_adjust(wspace=0.4, hspace=0.4)
+
+    Z = clf.predict(np.c_[xx.ravel(), yy.ravel()])
+
+    # Put the result into a color plot
+    Z = Z.reshape(xx.shape)
+    plt.contourf(xx, yy, Z, cmap=plt.cm.coolwarm, alpha=0.8)
+
+    # Plot also the training points
+    plt.scatter(X_train[:, 0], X_train[:, 1], c=y_train, cmap=plt.cm.coolwarm)
+    plt.xlabel('Sepal length')
+    plt.ylabel('Sepal width')
+    plt.xlim(xx.min(), xx.max())
+    plt.ylim(yy.min(), yy.max())
+    plt.xticks(())
+    plt.yticks(())
+    plt.title(titles[i])
+```
+
+X_test 를 사용하여 예측력을 테스트합니다.
+
+```python
+clf.predict(X_test)
+clf.score(X_test, y_test)
+```
+
+71.99 % 의 정확도를 나타냅니다.
