--- a/_posts/2017-06-26-LDA.md
+++ b/_posts/2017-06-26-LDA.md
@@ -5,7 +5,7 @@ date: 2017-06-26
 category:
 - Data Analysis  
 
-tags: [supervised, classification, demension reduction]  
+tags: [supervised, classification, demension reduction, python]  
 published: true  
 ---
 
