--- a/_posts/2017-06-27-SVM.md
+++ b/_posts/2017-06-27-SVM.md
@@ -5,11 +5,11 @@ date: 2017-06-26
 category:
 - Data Analysis  
 
-tags: [supervised, classification]  
+tags: [supervised, classification, python]  
 published: true  
 ---
 
-(작성중) 이번 포스트에서는 분류classification 방법론 가운데 하나인 SVM (Support Vector Machine) 에 대하여 설명합니다. SVM 은 실제로 분류 정확도가 상당히 높은 방법론으로 알려져 있습니다.
+이번 포스트에서는 분류classification 방법론 가운데 하나인 SVM (Support Vector Machine) 에 대하여 설명합니다. SVM 은 실제로 분류 정확도가 상당히 높은 방법론 가운데 하나로 알려져 있습니다.
 
 # 알고리즘
 
