--- a/_posts/2017-10-01-R-101-Data-Types.md
+++ b/_posts/2017-10-01-R-101-Data-Types.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: R 기초 101 자료의 종류들 (Data Types)  
+title: R 기초 101 데이터의 종류들 (Data Types)  
 date: 2017-10-01  
 category:
 - Data Analysis  
@@ -8,6 +8,8 @@ category:
 tags: [R]  
 published: true  
 ---
+
+***preface*** 이번 포스트에서는 R에서 사용되는 데이터의 종류들에 대하여 설명합니다.
 
 # Data Types
 
