--- a/_posts/2017-10-01-R-101-Data-Types.md
+++ b/_posts/2017-10-01-R-101-Data-Types.md
@@ -14,12 +14,14 @@ published: true
 # Data Types
 
 다음 자료를 참고하였습니다:  
-- http://www.statmethods.net/input/datatypes.html
+- [http://www.statmethods.net/input/datatypes.html](http://www.statmethods.net/input/datatypes.html)
 
 R 은 스칼라, 벡터 (숫자, 문자, 논리), 행렬, 데이터 프레임 및 리스트를 포함하여 다양한 데이터 유형을 사용합니다.
 
 
 ## Vectors
+
+벡터의 원소를 직접 입력할 수 있습니다.
 
 ```r
 a <- c(1,2,5.3,6,-2,4) # numeric vector
@@ -27,7 +29,7 @@ b <- c("one","two","three") # character vector
 c <- c(TRUE,TRUE,TRUE,FALSE,TRUE,FALSE) #logical vector
 ```
 
-Refer to elements of a vector using subscripts.
+이미 입력된 벡터의 특정 원소를 지정할 수 있습니다.
 
 ```r
 a[c(2,4)] # 2nd and 4th elements of vector
@@ -35,13 +37,15 @@ a[c(2,4)] # 2nd and 4th elements of vector
 
 ## Matrices
 
-All columns in a matrix must have the same mode(numeric, character, etc.) and the same length. The general format is
+행렬의 모든 열은 동일한 종류 (숫자, 문자 등) 및 동일한 길이를 가져야합니다. 일반적인 형식은 다음과 같습니다.
 
 ```r
 mymatrix <- matrix(vector, nrow=r, ncol=c, byrow=FALSE, dimnames=list(char_vector_rownames, char_vector_colnames))  
 ```
 
-**byrow=TRUE** indicates that the matrix should be filled by rows. **byrow=FALSE** indicates that the matrix should be filled by columns (the default). **dimnames** provides optional labels for the columns and rows.
+**byrow=TRUE** indicates that the matrix should be filled by rows.  
+**byrow=FALSE** indicates that the matrix should be filled by columns (the default).  
+**dimnames** provides optional labels for the columns and rows.  
 
 ```r
 # generates 5 x 4 numeric matrix
@@ -54,7 +58,7 @@ cnames <- c("C1", "C2")
 mymatrix <- matrix(cells, nrow=2, ncol=2, byrow=TRUE, dimnames=list(rnames, cnames))
 ```
 
-Identify rows, columns or elements using subscripts.
+행렬의 특정 행 또는 열을 지정할 수 있습니다.
 
 ```r
 x[,4] # 4th column of matrix
