--- a/_posts/2017-10-01-R-101-Data-Types.md
+++ b/_posts/2017-10-01-R-101-Data-Types.md
@@ -68,11 +68,12 @@ x[2:4,1:3] # rows 2,3,4 of columns 1,2,3
 
 ## Arrays
 
-Arrays are similar to matrices but can have more than two dimensions. See help(array) for details.
+배열(Arrays)은 행렬(Matrix)과 유사하지만 둘 이상의 차원을 가질 수 있습니다. 자세한 내용은 help(array) 를 참조하십시오.
+
 
 ## Data Frames
 
-A data frame is more general than a matrix, in that different columns can have different modes (numeric, character, factor, etc.). This is similar to SAS and SPSS datasets.
+데이터 프레임은 보다 일반적인 자료 형태입니다. 각 열은 서로 다른 종류의 변수(숫자, 문자, factor 등)를 가질 수 있습니다. 이는 SAS 및 SPSS 에서의 dataset 과 유사합니다.
 
 ```r
 d <- c(1,2,3,4)
@@ -82,7 +83,7 @@ mydata <- data.frame(d,e,f)
 names(mydata) <- c("ID","Color","Passed") # variable names
 ```
 
-There are a variety of ways to identify the elements of a data frame .
+다양한 방법으로 데이터 프레임의 특정 요소를 식별할 수 있습니다.
 
 ```r
 myframe[3:5] # columns 3,4,5 of data frame
