--- a/_posts/2017-10-01-R-101-Data-Types.md
+++ b/_posts/2017-10-01-R-101-Data-Types.md
@@ -3,7 +3,7 @@ layout: post
 title: R 기초 101 데이터의 종류들 (Data Types)  
 date: 2017-10-01  
 category:
-- Data Analysis  
+- R for Beginners  
 
 tags: [R]  
 published: true  
