--- a/_posts/2017-10-01-R-110-Date-Values.md
+++ b/_posts/2017-10-01-R-110-Date-Values.md
@@ -3,7 +3,7 @@ layout: post
 title: R 기초 110 날짜 다루기 (Date Values)  
 date: 2017-10-01  
 category:
-- Data Analysis  
+- R for Beginners  
 
 tags: [R]  
 published: true  
