--- a/_posts/2017-10-02-R-209-Reshape.md
+++ b/_posts/2017-10-02-R-209-Reshape.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: R 기초 201 Creating New Variables  
+title: R 기초 209 데이터 재구성하기 (Reshaping Data)  
 date: 2017-10-02  
 category:
 - R for Beginners  
@@ -9,12 +9,12 @@ tags: [R]
 published: false  
 ---
 
+***preface*** 이번 포스트에서는 데이터를 재구성하여 구조를 바꾸는 방법에 대하여 설명합니다.
+
 # Reshaping Data
 
 다음 자료를 참고하였습니다:  
-- http://www.statmethods.net/management/reshape.html
-
-# Reshaping Data
+- [http://www.statmethods.net/management/reshape.html](http://www.statmethods.net/management/reshape.html)
 
 R provides a variety of methods for reshaping data prior to analysis.
 
