--- a/_posts/2017-10-02-R-210-Subsetting.md
+++ b/_posts/2017-10-02-R-210-Subsetting.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: R 기초 201 Creating New Variables  
+title: R 기초 210 데이터 추출하기 (Subsetting Data)  
 date: 2017-10-02  
 category:
 - R for Beginners  
@@ -9,12 +9,12 @@ tags: [R]
 published: false  
 ---
 
-# R Cheatsheet Data Subsetting
-
-다음 자료를 참고하였습니다:  
-- http://www.statmethods.net/management/subset.html
+***preface*** 이번 포스트에서는 기존 자료에서 일정한 규칙에 따라 데이터를 추출하는 방법에 대하여 설명합니다.
 
 # Subsetting Data
+
+다음 자료를 참고하였습니다:  
+- [http://www.statmethods.net/management/subset.html](http://www.statmethods.net/management/subset.html)
 
 R has powerful indexing features for accessing object elements. These features can be used to select and exclude variables and observations. The following code snippets demonstrate ways to keep or delete variables and observations and to take random samples from a dataset.
 
