--- a/_posts/2017-10-02-R-206-Sorting.md
+++ b/_posts/2017-10-02-R-206-Sorting.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: R 기초 201 Creating New Variables  
+title: R 기초 206 데이터 정렬하기 (Sorting Data)  
 date: 2017-10-02  
 category:
 - R for Beginners  
@@ -9,10 +9,12 @@ tags: [R]
 published: false  
 ---
 
+***preface*** 이번 포스트에서는 데이터를 정렬하는 방법에 대하여 설명합니다.
+
 # Sorting Data
 
 다음 자료를 참고하였습니다:  
-- http://www.statmethods.net/management/sorting.html
+- [http://www.statmethods.net/management/sorting.html](http://www.statmethods.net/management/sorting.html)
 
 # Sorting Data
 
