--- a/_posts/2017-10-02-R-210-Subsetting.md
+++ b/_posts/2017-10-02-R-210-Subsetting.md
@@ -6,7 +6,7 @@ category:
 - R for Beginners  
 
 tags: [R]  
-published: false  
+published: true  
 ---
 
 ***preface*** 이번 포스트에서는 기존 자료에서 일정한 규칙에 따라 데이터를 추출하는 방법에 대하여 설명합니다.
