--- a/_posts/2017-06-25-KNN.md
+++ b/_posts/2017-06-25-KNN.md
@@ -5,7 +5,7 @@ date: 2017-06-25
 category:
 - Data Analysis
 
-tag: [KNN, supervised, classification, python]  
+tag: [supervised, classification, python]  
 author: hkim  
 ---
 
