--- a/_posts/2000-01-01-noname.md
+++ b/_posts/2000-01-01-noname.md
@@ -1,9 +1,10 @@
 ---
-layout:
+layout: post  
 title:
 date: 2017-01-01  
 category:
 - blog
 tag: []  
 author: hkim  
+hidden: true # don't count this post in blog pagination
 ---
