--- a/_posts/2000-01-01-what-is-r.md
+++ b/_posts/2000-01-01-what-is-r.md
@@ -1,11 +1,12 @@
 ---
-layout:
+layout: post  
 title: R 이란? (What is R?)
 date: 2017-01-01  
 category:
 - blog
 tag: []  
 author: hkim  
+hidden: true # don't count this post in blog pagination
 ---
 
 ***preface***
