--- a/_posts/2000-01-01-noname.md
+++ b/_posts/2000-01-01-noname.md
@@ -8,3 +8,9 @@ tag: []
 author: hkim  
 hidden: true # don't count this post in blog pagination
 ---
+
+향후 공부할 과제들:
+
+Granger Causality
+VAR
+VECM (Vector Error Correction Model)
