--- a/_posts/2017-11-03-R-403-Time-Series.md
+++ b/_posts/2017-11-03-R-403-Time-Series.md
@@ -2,11 +2,11 @@
 layout: post  
 title: Time Series and Forecasting
 date: 2017-11-03  
-category:
-- R for Beginners  
-tag: [R]    
+category: [R for Beginners]  
+tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
+
 ---
 
 다음 자료를 참고하였습니다:  
