--- a/_posts/2017-06-26-LDA.md
+++ b/_posts/2017-06-26-LDA.md
@@ -2,10 +2,10 @@
 layout: post  
 title: LDA (Linear Discriminant Analysis)  
 date: 2017-06-26  
-category:
-- Data Analysis
+category: [Data Analysis]  
 tag: [supervised, classification, demension reduction, python]  
 author: hkim  
+
 ---
 
 ***preface*** 이번 포스트에서는 분류classification 방법론 가운데 하나인 LDA (Linear Discriminant Analysis) 와 QDA (Quadratic Discriminant Analysis) 에 대하여 설명합니다. 분류classification란 A 그룹과 B 그룹으로 분류된 데이터가 있을 때, 새로 관측된 데이터가 어느 그룹에 속할지 추정하는 것을 말합니다.
