--- a/_posts/2017-06-27-SVM.md
+++ b/_posts/2017-06-27-SVM.md
@@ -2,10 +2,10 @@
 layout: post  
 title: SVM (Support Vector Machine)  
 date: 2017-06-26  
-category:
-- Data Analysis
+category: [Data Analysis]  
 tag: [supervised, classification, python]  
 author: hkim  
+
 ---
 
 ***preface*** 이번 포스트에서는 분류classification 방법론 가운데 하나인 SVM (Support Vector Machine) 에 대하여 설명합니다. SVM 은 실제로 분류 정확도가 상당히 높은 방법론 가운데 하나로 알려져 있습니다.
