--- a/_posts/2017-10-10-R-110-Date-Values.md
+++ b/_posts/2017-10-10-R-110-Date-Values.md
@@ -3,10 +3,10 @@ layout: post
 comments: true  
 title: R 기초 110 날짜 다루기 (Date Values)  
 date: 2017-10-10  
-category:
-- R for Beginners  
+category: [R for Beginners]  
 tag: [R]  
 author: hkim  
+
 ---
 
 ***preface*** 이번 포스트에서는 R에서 날짜 자료를 다루는 방법에 대하여 설명합니다.
