--- a/_posts/2017-10-16-R-206-Sorting.md
+++ b/_posts/2017-10-16-R-206-Sorting.md
@@ -2,10 +2,10 @@
 layout: post  
 title: R 기초 206 데이터 정렬하기 (Sorting Data)  
 date: 2017-10-16  
-category:
-- R for Beginners  
+category: [R for Beginners]  
 tag: [R]  
 author: hkim  
+
 ---
 
 ***preface*** 이번 포스트에서는 데이터를 정렬하는 방법에 대하여 설명합니다.
