--- a/_posts/2017-10-17-R-207-Merging.md
+++ b/_posts/2017-10-17-R-207-Merging.md
@@ -2,10 +2,10 @@
 layout: post  
 title: R 기초 207 데이터 합치기 (Merging Data)  
 date: 2017-10-17  
-category:
-- R for Beginners  
+category: [R for Beginners]  
 tag: [R]  
 author: hkim  
+
 ---
 
 ***preface*** 이번 포스트에서는 데이터를 합치는 방법에 대하여 설명합니다.
