--- a/_posts/2017-10-19-R-209-Reshape.md
+++ b/_posts/2017-10-19-R-209-Reshape.md
@@ -2,10 +2,10 @@
 layout: post  
 title: R 기초 209 데이터 재구성하기 (Reshaping Data)  
 date: 2017-10-19  
-category:
-- R for Beginners  
+category: [R for Beginners]  
 tag: [R]  
 author: hkim  
+
 ---
 
 ***preface*** 이번 포스트에서는 데이터를 재구성하여 구조를 바꾸는 방법에 대하여 설명합니다.
