--- a/_posts/2017-10-19-R-209-Reshape.md
+++ b/_posts/2017-10-19-R-209-Reshape.md
@@ -5,6 +5,8 @@ date: 2017-10-19
 category: [R for Beginners]  
 tag: [R]  
 author: hkim  
+image: /assets/images/icon/iconmonstr-monitoring-6-240.png
+headerImage: true
 
 ---
 
@@ -14,6 +16,7 @@ author: hkim
 
 다음 자료를 참고하였습니다:  
 - [http://www.statmethods.net/management/reshape.html](http://www.statmethods.net/management/reshape.html)
+- [https://www.r-statistics.com/tag/transpose/](https://www.r-statistics.com/tag/transpose/)
 
 R provides a variety of methods for reshaping data prior to analysis.
 
