--- a/_posts/2017-10-16-R-206-Sorting.md
+++ b/_posts/2017-10-16-R-206-Sorting.md
@@ -5,6 +5,8 @@ date: 2017-10-16
 category: [R for Beginners]  
 tag: [R]  
 author: hkim  
+image: /assets/images/icon/iconmonstr-monitoring-6-240.png
+headerImage: true
 
 ---
 
@@ -15,7 +17,7 @@ author: hkim
 다음 자료를 참고하였습니다:  
 - [http://www.statmethods.net/management/sorting.html](http://www.statmethods.net/management/sorting.html)
 
-R 에서 sort( ) 함수를 쓰면 해당 변수만 순서대로 정렬됩니다. 전체 관측치를 특정 변수에 따라 오름차순/내림차순 정렬을 하기 위해서는 order() 함수를 사용합니다. 기본적으로 정렬은 오름차순(ASCENDING)입니다. 내림차순(DESCENDING)으로 정렬하기 위해서는 해당 변수 앞에 마이너스(-) 부호를 붙입니다.
+R 에서 `sort( )` 함수를 쓰면 해당 변수만 순서대로 정렬됩니다. 전체 관측치를 특정 변수에 따라 오름차순/내림차순 정렬을 하기 위해서는 `order( )` 함수를 사용합니다. 기본적으로 정렬은 오름차순(ASCENDING)입니다. 내림차순(DESCENDING)으로 정렬하기 위해서는 해당 변수 앞에 마이너스(-) 부호를 붙입니다.
 
 ```r
 # sorting examples using the mtcars dataset
