--- a/_posts/2017-10-17-R-207-Merging.md
+++ b/_posts/2017-10-17-R-207-Merging.md
@@ -12,41 +12,31 @@ headerImage: true
 
 ***preface*** 이번 포스트에서는 데이터를 합치는 방법에 대하여 설명합니다.
 
-# Merging Data
-
 다음 자료를 참고하였습니다:  
 - [http://www.statmethods.net/management/merging.html](http://www.statmethods.net/management/merging.html)
 
-# Merging Data
+## 데이터를 수평으로 연결 (Adding Columns)
 
-## Adding Columns
-
-To merge two data frames (datasets) horizontally, use the merge function. In most cases, you join two data frames by one or more common key variables (i.e., an inner join).
+데이터프레임을 수평으로 연결(변수 추가)하기 위해서는 `merge( )` 함수를 사용합니다. 이때, 하나 이상의 primary key 를 이용해서 이를 기준으로 데이터를 합칩니다.
 
 ```r
 # merge two data frames by ID
-total <- merge(data frameA,data frameB,by="ID")
+total <- merge(dataframeA,dataframeB,by="ID")
 ```
 
 ```r
 # merge two data frames by ID and Country
-total <- merge(data frameA,data frameB,by=c("ID","Country"))
+total <- merge(dataframeA,dataframeB,by=c("ID","Country"))
 ```
 
-## Adding Rows
+## 데이터를 수직으로 연결 (Adding Rows)
 
-To join two data frames (datasets) vertically, use the rbind function. The two data frames must have the same variables, but they do not have to be in the same order.
+데이터프레임을 수직으로 연결(관측치 추가)하기 위해서는 `rbind( )` 함수를 사용합니다. 두 데이터프레임은 같은 변수명을 가지고 있어야 합니다. 변수 순서는 달라도 상관 없습니다.
 
 ```r
-total <- rbind(data frameA, data frameB)
+total <- rbind(dataframeA, dataframeB)
 ```
 
-If data frameA has variables that data frameB does not, then either:
-1.Delete the extra variables in data frameA or
-2.Create the additional variables in data frameB and set them to NA (missing)
-
-before joining them with rbind( ).
-
-## Going Further
-
-To practice manipulating data frames with the dplyr package, try this interactive course on data frame manipulation in R.
+만약 dataframeA 가 dataframeB 에 없는 변수를 가지고 있는 경우 `rbind( )`를 사용하기 전에 다음을 실시합니다:
+1. dataframeA 에서 해당 변수를 삭제하거나
+2. dataframeB 에서 해당 변수를 만들어 NA(missing) 입력합니다.
