--- a/_posts/2017-10-19-R-209-Reshape.md
+++ b/_posts/2017-10-19-R-209-Reshape.md
@@ -85,7 +85,7 @@ time | x1 | x2
 1    |5.5 |3.5
 2    |2.5 |4.5
 
-There is much more that you can do with the melt( ) and cast( ) functions. See the documentation for more details.
+There is much more that you can do with the `melt( )` and `cast( )` functions. See the documentation for more details.
 
 ## Going Further
 
