--- a/_posts/2017-06-27-SVM.md
+++ b/_posts/2017-06-27-SVM.md
@@ -5,6 +5,8 @@ date: 2017-06-26
 category: [Data Analysis]  
 tag: [supervised, classification, python]  
 author: hkim  
+image: /assets/images/icon/iconmonstr-monitoring-6-240.png
+headerImage: true
 
 ---
 
