--- a/_posts/2017-10-19-R-209-Reshape.md
+++ b/_posts/2017-10-19-R-209-Reshape.md
@@ -12,8 +12,6 @@ headerImage: true
 
 ***preface*** 이번 포스트에서는 데이터를 재구성하여 구조를 바꾸는 방법에 대하여 설명합니다.
 
-# Reshaping Data
-
 다음 자료를 참고하였습니다:  
 - [http://www.statmethods.net/management/reshape.html](http://www.statmethods.net/management/reshape.html)
 - [https://www.r-statistics.com/tag/transpose/](https://www.r-statistics.com/tag/transpose/)
@@ -22,7 +20,7 @@ R provides a variety of methods for reshaping data prior to analysis.
 
 ## Transpose
 
-Use the t() function to transpose a matrix or a data frame. In the later case, rownames become variable (column) names.
+Use the `t( )` function to transpose a matrix or a data frame. In the later case, rownames become variable (column) names.
 
 ```r
 # example using built-in dataset
@@ -35,6 +33,15 @@ Use the t() function to transpose a matrix or a data frame. In the later case, r
 Hadley Wickham has created a comprehensive package called reshape to massage data. Both an introduction and article are available. There is even a video!
 
 Basically, you "melt" data so that each row is a unique id-variable combination. Then you "cast" the melted data into any shape you would like. Here is a very simple example.
+
+
+
+**[그림: reshape 패키지 사용 개념도]** (자료: r-statistics.com)
+{: .text-center }
+
+![test_image](https://i2.wp.com/www.r-statistics.com/wp-content/uploads/2012/01/reshaping-data-using-melt-and-cast.png){: .image-center width="400"}
+
+
 
 mydata
 
