--- a/_posts/2017-10-01-R-101-Data-Types.md
+++ b/_posts/2017-10-01-R-101-Data-Types.md
@@ -137,7 +137,8 @@ rating <- ordered(rating)
 # R now treats rating as ordinal
 ```
 
-R will treat factors as nominal variables and ordered factors as ordinal variables in statistical proceedures and graphical analyses. You can use options in the factor( ) and ordered( ) functions to control the mapping of integers to strings (overiding the alphabetical ordering). You can also use factors to create value labels.
+앞으로 실시할 퉁계 분석과 그래프 작업에서 factor 는 nominal variable 로, ordered factors 는 ordinal variable 로 사용됩니다. `factor( )` 및 `ordered( )` 함수의 옵션을 이용하여 문자에 정수를 할당하는 방법을 변경할 수 있습니다.(default 는 alphabetical) 변수 레이블(value label)을 만들기 위해 factor 를 사용할 수 있습니다.
+
 
 ## Useful Functions
 
