--- a/_posts/2017-10-19-R-209-Reshape.md
+++ b/_posts/2017-10-19-R-209-Reshape.md
@@ -16,11 +16,11 @@ headerImage: true
 - [http://www.statmethods.net/management/reshape.html](http://www.statmethods.net/management/reshape.html)
 - [https://www.r-statistics.com/tag/transpose/](https://www.r-statistics.com/tag/transpose/)
 
-R provides a variety of methods for reshaping data prior to analysis.
+R 은 실제 분석에 들어가기 전에 데이터를 재구성하여 구조를 바꾸는 다양한 방법을 제공합니다.
 
 ## Transpose
 
-Use the `t( )` function to transpose a matrix or a data frame. In the later case, rownames become variable (column) names.
+`t( )` 함수를 이용하면 matrix 나 data frame 을 transpose 할 수 있습니다. data frame 의 경우, rownames 가 변수명(column names)이 됩니다.
 
 ```r
 # example using built-in dataset
@@ -28,12 +28,11 @@ Use the `t( )` function to transpose a matrix or a data frame. In the later case
  t(mtcars)
 ```
 
-## The Reshape Package
+## reshape 패키지 이용하기 (The Reshape Package)
 
-Hadley Wickham has created a comprehensive package called reshape to massage data. Both an introduction and article are available. There is even a video!
+Hadley Wickham 이 만든 reshape 패키지는 매우 강력합니다.  [소개글](http://had.co.nz/reshape/introduction.pdf) 과 [논문](http://www.jstatsoft.org/v21/i12/paper), [비디오](http://had.co.nz/reshape/french-fries-demo.html)까지 있습니다.
 
-Basically, you "melt" data so that each row is a unique id-variable combination. Then you "cast" the melted data into any shape you would like. Here is a very simple example.
-
+`melt( )` 함수를 사용하면 각 관측치가 unique 한 id-variable 을 가지는 panel data 형태로 만들어줍니다. `cast( )` 함수를 사용하면 이렇게 melt 된 데이터를 원하는대로 조합할 수 있습니다. 아래 그림과 예제를 참고하시기 바랍니다.
 
 
 **[그림: reshape 패키지 사용 개념도]** (자료: r-statistics.com)
@@ -42,15 +41,16 @@ Basically, you "melt" data so that each row is a unique id-variable combination.
 ![test_image](https://i2.wp.com/www.r-statistics.com/wp-content/uploads/2012/01/reshaping-data-using-melt-and-cast.png){: .image-center width="800"}
 
 
-
 mydata
 
 id | time | x1 | x2
----|------|----|----
+:---:|:------:|----:|:----:
 1  |1     |5   |6
 1  |2     |3   |5
 2  |1     |6   |1
 2  |2     |2   |4
+
+### melt( )
 
 ```r
 # example of melt function
@@ -61,7 +61,7 @@ mdata <- melt(mydata, id=c("id","time"))
 newdata
 
 id | time | variable | value
----|------|----------|-------
+:---:|:------:|:----------:|:-------:
 1  |1     |x1        |5
 1  |2     |x1        |3
 2  |1     |x1        |6
@@ -70,6 +70,8 @@ id | time | variable | value
 1  |2     |x2        |5
 2  |1     |x2        |1
 2  |2     |x2        |4
+
+### cast( )
 
 ```r
 # cast the melted data
@@ -81,19 +83,13 @@ timemeans <- cast(mdata, time~variable, mean)
 subjmeans
 
 id | x1 | x2
----|----|----
+:---:|:----:|:----:
 1  |4   |5.5
 2  |4   |2.5
 
 timemeans
 
 time | x1 | x2
------|----|----
+:-----:|:----:|:----:
 1    |5.5 |3.5
 2    |2.5 |4.5
-
-There is much more that you can do with the `melt( )` and `cast( )` functions. See the documentation for more details.
-
-## Going Further
-
-To practice massaging data, try this course in cleaning data in R.
