--- a/_posts/2017-10-20-R-210-Subsetting.md
+++ b/_posts/2017-10-20-R-210-Subsetting.md
@@ -19,9 +19,10 @@ headerImage: true
 
 R has powerful indexing features for accessing object elements. These features can be used to select and exclude variables and observations. The following code snippets demonstrate ways to keep or delete variables and observations and to take random samples from a dataset.
 
-R에는 개체 요소에 액세스하기 위한 강력한 색인 기능이 있습니다. 이러한 기능을 사용하여 변수 및 관측을 선택하고 제외할 수 있습니다. 다음 코드 스니펫은 변수 및 관측을 유지 또는 삭제하고 데이터 세트에서 임의의 샘플을 가져 오는 방법을 보여줍니다.
+R에는 object 에 액세스하기 위한 강력한 색인 기능이 있습니다. 이러한 기능을 사용하여 특정 변수나 관측치를 선택/제외할 수 있습니다. 다음 코드는 변수나 관측치를 유지 또는 삭제하고 dataset 에서 임의의 샘플을 가져 오는 방법을 보여줍니다.
 
-## Selecting (Keeping) Variables (변수 선택하기)
+
+## 변수 선택하기 (Selecting (Keeping) Variables)
 
 ```r
 # select variables v1, v2, v3
@@ -36,13 +37,8 @@ newdata <- mydata[myvars]
 newdata <- mydata[c(1,5:10)]
 ```
 
-To practice this interactively, try the selection of data frame elements exercises in the Data frames chapter of this introduction to R course.
 
-이것을 대화식으로 연습하려면, R 프레임 워크 소개의 데이터 프레임 장에서 데이터 프레임 요소 연습을 선택하십시오.
-
-
-
-## Excluding (DROPPING) Variables (변수 제외하기)
+## 변수 제외하기 (Excluding (DROPPING) Variables)
 
 ```r
 # exclude variables v1, v2, v3
@@ -56,7 +52,8 @@ newdata <- mydata[c(-3,-5)]
 mydata$v3 <- mydata$v5 <- NULL
 ```
 
-## Selecting Observations (관측치 선택하기)
+
+## 관측치 선택하기 (Selecting Observations)
 
 ```r
 # first 5 observations
@@ -71,19 +68,14 @@ newdata <- mydata[ which(gender=='F' & age > 65),]
 detach(mydata)
 ```
 
-## Selection using the Subset Function (subset 함수를 사용한 관측치 선택하기)
+## subset 함수를 사용한 관측치 선택하기 (Selection using the Subset Function)
 
-The subset( ) function is the easiest way to select variables and observations. In the following example, we select all rows that have a value of age greater than or equal to 20 or age less then 10. We keep the ID and Weight columns.
-
-subset() 함수는 변수와 관측치를 선택하는 가장 쉬운 방법입니다. 다음 예에서는 20보다 크거나 같은 age 또는 10보다 적은 age의 값을 가진 모든 행을 선택합니다. ID 및 Weight 열은 유지합니다.
+`subset( )` 함수는 변수와 관측치를 선택하는 가장 쉬운 방법입니다. 다음 예에서는 20보다 크거나 같은 age 또는 10보다 적은 age의 값을 가진 모든 행을 선택합니다. ID 및 Weight 변수를 유지합니다.
 
 ```r
 # using subset function
-newdata <- subset(mydata, age >= 20 | age < 10,
-select=c(ID, Weight))
+newdata <- subset(mydata, age >= 20 | age < 10, select=c(ID, Weight))
 ```
-
-In the next example, we select all men over the age of 25 and we keep variables weight through income (weight, income and all columns between them).
 
 다음 예에서는 25 세 이상의 모든 남성을 선택하고, 체중, 소득 및 그들 사이의 모든 변수를 선택합니다.
 
@@ -92,15 +84,10 @@ In the next example, we select all men over the age of 25 and we keep variables 
 newdata <- subset(mydata, sex=="m" & age > 25, select=weight:income)
 ```
 
-To practice the subset() function, try this this interactive exercise. on subsetting data.tables.
 
-subset() 함수를 연습하려면 이 대화형 연습을 시도하십시오.
+## 랜덤 샘플 (Random Samples)
 
-## Random Samples (랜덤 샘플)
-
-Use the sample( ) function to take a random sample of size n from a dataset.
-
-sample() 함수를 사용하여 데이터 세트에서 크기 n의 무작위 샘플을 가져옵니다.
+`sample( )` 함수를 사용하여 데이터 세트에서 n 사이즈의 무작위 샘플을 가져올 수 있습니다.
 
 ```r
 # take a random sample of size 50 from a dataset mydata
