--- a/_posts/2017-11-03-R-403-Time-Series.md
+++ b/_posts/2017-11-03-R-403-Time-Series.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: Time Series and Forecasting
+title: 시계열 분석과 예측 (Time Series and Forecasting)
 date: 2017-11-03  
 category: [R for Beginners]  
 tag: [R]  
