--- a/_posts/2017-12-09-Open-API.md
+++ b/_posts/2017-12-09-Open-API.md
@@ -46,7 +46,7 @@ locCode_nm <-c("종로구","중구","용산구","성동구","광진구")
 # 날짜
 datelist <-c("201601","201602","201603","201604","201605","201606","201607","201608","201609","201610","201611","201612")
 
-# 하나의 지역코드 x 날짜 당 출력 관측치 수
+# 하나의 지역코드 x 날짜 당 출력 관측치 수 (따로 설정하지 않으면 default = 10 입니다)
 Num_of_Rows <- 100
 
 
