--- a/_posts/2017-12-09-Open-API.md
+++ b/_posts/2017-12-09-Open-API.md
@@ -49,7 +49,7 @@ datelist <-c("201601","201602","201603","201604","201605","201606","201607","201
 # 하나의 지역코드 x 날짜 당 출력 관측치 수 (따로 설정하지 않으면 default = 10 입니다)
 Num_of_Rows <- 100
 
-
+# 지역코드 x 날짜 별로 자료를 요청하는 url 생성
 urllist <- list()
 cnt <-0
 
