--- a/_posts/2017-12-09-Open-API.md
+++ b/_posts/2017-12-09-Open-API.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: R 에서 Open API 사용하기 (Using Open API in R)  
+title: Open API 사용하기 (Using Open API)  
 date: 2017-12-09  
 category: [Data Analysis]  
 tag: [R]  
