--- a/_posts/2017-10-20-R-210-Subsetting.md
+++ b/_posts/2017-10-20-R-210-Subsetting.md
@@ -62,10 +62,9 @@ newdata <- mydata[1:5,]
 # based on variable values
 newdata <- mydata[ which(mydata$gender=='F' & mydata$age > 65), ]
 
-# or
-attach(mydata)
-newdata <- mydata[ which(gender=='F' & age > 65),]
-detach(mydata)
+# which( ) 를 쓰지 않아도 선택 가능
+newdata <- mydata[ mydata$gender=='F' & mydata$age > 65 , ]
+
 ```
 
 ## subset 함수를 사용한 관측치 선택하기 (Selection using the Subset Function)
@@ -83,6 +82,10 @@ newdata <- subset(mydata, age >= 20 | age < 10, select=c(ID, Weight))
 # using subset function (part 2)
 newdata <- subset(mydata, sex=="m" & age > 25, select=weight:income)
 ```
+
+`subset( )` 함수를 사용하는 것보다 `mydata[condition, ]` 를 사용하는 것이 더 낫다는 지적이 있습니다.
+Hadley Wickham 가 `subset( )` 함수를 사용할 때의 위험성을 [이곳](http://adv-r.had.co.nz/Computing-on-the-language.html)에서 설명하고 있습니다.
+[이곳](https://stackoverflow.com/questions/9860090/why-is-better-than-subset)에서도 같은 내용을 보다 간단히 설명하고 있습니다.
 
 
 ## 랜덤 샘플 (Random Samples)
