--- a/_posts/2017-10-24-R-304-t-tests.md
+++ b/_posts/2017-10-24-R-304-t-tests.md
@@ -16,6 +16,8 @@ headerImage: true
 
 # t-tests
 
+`t.test( )` 함수는 다양한 t-test 를 제공합니다.
+
 The t.test( ) function produces a variety of t-tests. Unlike most statistical packages, the default assumes unequal variance and applies the Welsh df modification.
 
 ```r
