--- a/_posts/2017-11-04-R-404-PCA-and-FA.md
+++ b/_posts/2017-11-04-R-404-PCA-and-FA.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: Principal Components and Factor Analysis
+title: 주성분 분석과 요인 분석 (Principal Components and Factor Analysis)  
 date: 2017-11-04  
 category: [R for Beginners]  
 tag: [R]  
@@ -11,14 +11,15 @@ headerImage: true
 
 ---
 
+***preface*** 이번 포스트에서는 주성분 분석과 요인 분석에 대하여 알아봅니다. 요인 분석은 탐색적(exploratory) 요인 분석과 확증적(confirmatory) 요인 분석을 모두 다룹니다.
+
 다음 자료를 참고하였습니다:  
 - [https://www.statmethods.net/advstats/factor.html](https://www.statmethods.net/advstats/factor.html)
+- [https://cran.r-project.org/web/packages/ggfortify/vignettes/plot_pca.html](https://cran.r-project.org/web/packages/ggfortify/vignettes/plot_pca.html)
 
-# Principal Components and Factor Analysis
-This section covers principal components and factor analysis. The latter includes both exploratory and confirmatory methods.
+## 주성분 분석 (Principal Component)
 
-## Principal Components
-The princomp( ) function produces an unrotated principal component analysis.
+`princomp( )` 함수를 사용하면 unrotated principal component analysis 를 실행할 수 있습니다.
 
 ```r
 # Pricipal Components Analysis
@@ -32,11 +33,10 @@ fit$scores # the principal components
 biplot(fit)
 ```
 
-scree plot biplot click to view
-
 Use cor=FALSE to base the principal components on the covariance matrix. Use the covmat= option to enter a correlation or covariance matrix directly. If entering a covariance matrix, include the option n.obs=.
 
-The principal( ) function in the psych package can be used to extract and rotate principal components.
+
+psych 패키지의 `principal( )` 함수를 사용하면 extract and rotate principal components 를 계산할 수 있습니다.
 
 ```r
 # Varimax Rotated Principal Components
@@ -46,10 +46,12 @@ fit <- principal(mydata, nfactors=5, rotate="varimax")
 fit # print results
 ```
 
+`mydata` 는 raw data matrix 이거나 a covariance matrix 이어야 합니다.
+
 mydata can be a raw data matrix or a covariance matrix. Pairwise deletion of missing data is used. rotate can "none", "varimax", "quatimax", "promax", "oblimin", "simplimax", or "cluster"
 
 
-## Exploratory Factor Analysis
+## 탐색적 요인 분석 (Exploratory Factor Analysis)
 The factanal( ) function produces maximum likelihood factor analysis.
 
 ```r
