--- a/_posts/2017-11-04-R-404-PCA-and-FA.md
+++ b/_posts/2017-11-04-R-404-PCA-and-FA.md
@@ -46,7 +46,7 @@ fit <- principal(mydata, nfactors=5, rotate="varimax")
 fit # print results
 ```
 
-`mydata` 는 raw data matrix 이거나 a covariance matrix 이어야 합니다.
+`mydata` 는 raw data matrix 이거나 a covariance matrix 이어야 합니다. 결측치가 있는 경우 pairwise deletion 이 적용됩니다. rotate 는 "none", "varimax", "quatimax", "promax", "oblimin", "simplimax", or "cluster" 를 사용할 수 있습니다.
 
 mydata can be a raw data matrix or a covariance matrix. Pairwise deletion of missing data is used. rotate can "none", "varimax", "quatimax", "promax", "oblimin", "simplimax", or "cluster"
 
