--- a/_posts/2017-12-12-R-Install.md
+++ b/_posts/2017-12-12-R-Install.md
@@ -19,3 +19,12 @@ RStudio 삭제:
 
 
 Windows Vista and 7: The user's local App Data directory AppData\Local
+
+
+
+- [Moving data between R and Excel via the clipboard](https://www.johndcook.com/blog/r_excel_clipboard/)
+
+```r
+MYCOEFF <- as.data.frame(summary(MYMODEL)$coefficients) # 회귀분석결과를 데이터프레임으로 저장
+write.table(MYCOEFF, "clipboard", sep="\t", row.names=TRUE) # 데이터프레임을 엑셀에 붙여넣을 수 있게 클립보드로 복사
+```
