--- a/_posts/2017-10-10-R-110-Date-Values.md
+++ b/_posts/2017-10-10-R-110-Date-Values.md
@@ -108,6 +108,33 @@ age = function(from, to) {
 age(mydate1, mydate2)
 ```
 
+month number 를 구하는 함수
+```r
+# Date (YYYYMMDD) to Month Number
+mnumber = function(INPUT_YYYYMMDD){
+  INPUT_DATE <- as.Date(as.character(INPUT_YYYYMMDD), format = '%Y%m%d')
+  month <- as.numeric(strftime(INPUT_DATE, "%m"))
+  year  <- as.numeric(strftime(INPUT_DATE, "%Y"))
+  month_number <- (year - 1900)*12 + month
+}
+
+# Date (YYYYMMDD) to Quarter Number
+qnumber = function(INPUT_YYYYMMDD){
+  INPUT_DATE <- as.Date(as.character(INPUT_YYYYMMDD), format = '%Y%m%d')
+  month <- as.numeric(strftime(INPUT_DATE, "%m"))
+  year  <- as.numeric(strftime(INPUT_DATE, "%Y"))
+  month_number <- (year - 1900)*4 + (month-1 %/% 3)
+}
+
+
+# Date (YYYY-MM-DD) to Month Number
+mnumber = function(INPUT_DATE){
+  month <- as.numeric(strftime(INPUT_DATE, "%m"))
+  year  <- as.numeric(strftime(INPUT_DATE, "%Y"))
+  month_number <- (year - 1900)*12 + month
+}
+```
+
 ## Learning More
 
 문자 데이터를 날짜로 변환하는 것에 대한 자세한 내용은 help(as.Date) 및 help(strftime)를 참조하십시오. 날짜/시간 형식 지정에 대한 자세한 내용은 help(ISOdatetime)를 참조하십시오.
