--- a/_posts/2017-12-21-Logit.md
+++ b/_posts/2017-12-21-Logit.md
@@ -5,7 +5,7 @@ date: 2017-12-21
 category: [Data Analysis]  
 tag: [R]  
 author: hkim  
-hidden: false # don't count this post in blog pagination  
+hidden: true # don't count this post in blog pagination  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png  
 headerImage: true
 
