--- a/_posts/2017-12-21-Logit.md
+++ b/_posts/2017-12-21-Logit.md
@@ -3,44 +3,51 @@ layout: post
 title: Logistic Regression  
 date: 2017-12-21  
 category: [Data Analysis]  
-tag: [R]  
+tag: [R, classification]  
 author: hkim  
-hidden: true # don't count this post in blog pagination  
+hidden: false # don't count this post in blog pagination  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png  
 headerImage: true
 
 ---
 
+***preface*** Logistic regression 은 종속변수가 0/1 로 구성된 binary outcome 이고 설명변수가 continuous 로 구성되어 있을 때 사용 가능한 분석 방법입니다. 모형 적용에 필요한 가정이 적기 때문에 discriminant analysis 보다 널리 사용됩니다.
+
 다음 자료를 참고하였습니다:  
 - [https://stats.stackexchange.com/questions/120329/what-is-the-difference-between-logistic-and-logit-regression](https://stats.stackexchange.com/questions/120329/what-is-the-difference-between-logistic-and-logit-regression)
 
-
+- [https://en.wikipedia.org/wiki/Logistic_regression](https://en.wikipedia.org/wiki/Logistic_regression)
+- [https://www.statmethods.net/advstats/glm.html](https://www.statmethods.net/advstats/glm.html)
 
 
 ## Logistic, Logit, odds, odds ratio
 
-$\text{logit function}$ :
-
+$\text{logit function}$ :  
+.  
 $$
 \text{logit} \left( x \right) = \log \left( \frac{x}{1-x} \right)
 $$
 
-$\text{logistic function}$ :
-
+![logit function](http://mathworld.wolfram.com/images/eps-gif/LogitTransformation_1000.gif)
+.  
+$\text{logistic function}$ :  
+.  
 $$
 \text{logistic} \left( x \right) = \frac{ e^{x} }{ 1+e^{x} } = \frac{1}{1+e^{-x}}
 $$
 
-
-$\pi = F\left(X\right) = P \left( Y_i = 1 | X \right)$ : the probability of the event given $X$
+.  
+$\pi = F\left(X\right) = P \left( Y_i = 1 | X \right)$ : the probability of the event given $X$  
 
 $$\begin{eqnarray*}
-F\left(X\right) &=& \frac{1}{1+e^{- X \beta }} \\
+F\left(X\right) &=& \text{logistic} \left( X \beta \right) \\
+                &=& \frac{1}{1+e^{- X \beta }} \\
 F\left(X\right) \left( 1+e^{- X \beta } \right)& = & 1\\
 F\left(X\right)  + F\left(X\right) e^{- X \beta } &=& 1 \\
 e^{- X \beta } &=& \frac{1-F\left(X\right)}{F\left(X\right)}\\
 e^{ X \beta } &=& \frac{F\left(X\right)}{1-F\left(X\right)}\\
-X \beta &=& \log \left( \frac{F\left(X\right)}{1-F\left(X\right)} \right)
+X \beta &=& \log \left( \frac{F\left(X\right)}{1-F\left(X\right)} \right) \\
+        &=& \text{logit} \left( \pi \right)
 \end{eqnarray*}$$
 
 
@@ -67,62 +74,56 @@ $$\begin{eqnarray*}
 \end{eqnarray*}$$
 
 
-test
-
-
-
-$$
-\pi = \frac{ e^{X\beta} }{ 1+e^{X\beta} }
-$$
-
-
-
-$$\begin{eqnarray*}
-\text{logit} \left( \pi \right)
-& = & \log \left( \frac{\pi}{1-\pi} \right) \\
-& = & X \beta
-\end{eqnarray*}$$
-
-
-
-
-logit regression:
-$$
-\text{logit} \left( \pi \right) = \log \left( \frac{\pi}{1-\pi} \right) = X \beta
-$$
-
 
 ## Model Fitting
 
 
-$$ \text{Pr} \left( \right)  $$
+$$\begin{eqnarray*}
+\text{Pr} \left( Y_i = y_i | X_i \right)
+&=& p_i^{y_i} \left( 1-p_i \right)^{1-y_i} \\
+&=& \left( \frac{1}{1+e^{-X\beta}} \right)^{y_i} \left( 1- \frac{1}{1+e^{-X\beta}} \right)^{1-y_i}
+\end{eqnarray*}$$
 
 
-$\Pr \left(y|x;\theta \right) = h_{\theta}\left(x\right)^y(1 - h_\theta(x))^{(1-y)} $
+$$\begin{eqnarray*}
+L \left( \beta | x \right)
+&=& Pr \left( Y | X ; \beta \right) \\
+&=& \prod_i Pr \left( y_i | x_i ; \beta \right) \\
+&=& \prod_i \left( \frac{1}{1+e^{-X\beta}} \right)^{y_i} \left( 1- \frac{1}{1+e^{-X\beta}} \right)^{1-y_i}
+\end{eqnarray*}$$
 
-## t-tests
+Log Likelihood
 
-`t.test( )` 함수는 다양한 t-test 를 제공합니다. 다른 통계패키지와 달리, 디폴트로 unequal variance 를 가정하고 Welsh df modification 를 적용합니다.
+$$\begin{eqnarray*}
+\frac{1}{N} \text{log} \left( L \left( \beta | x \right) \right)
+&=& \frac{1}{N} \text{log} \left( \prod_i Pr \left( y_i | x_i ; \beta \right) \right) \\
+&=& \frac{1}{N} \sum_i \text{log} \left( Pr \left( y_i | x_i ; \beta \right) \right) \\
 
+&=& \frac{1}{N} \sum_i \text{log} \left( \left( \frac{1}{1+e^{-X\beta}} \right)^{y_i} \left( 1- \frac{1}{1+e^{-X\beta}} \right)^{1-y_i} \right) \\
+
+&=& \frac{1}{N} \sum_i \left(
+  y_i \text{log} \left( \frac{1}{1+e^{-X\beta}} \right) +
+  \left( 1-y_i \right) \text{log} \left( 1- \frac{1}{1+e^{-X\beta}} \right)
+  \right)
+
+\end{eqnarray*}$$
+
+..
+
+
+## Logistic Regression in R using glm()
 
 ```r
-# independent 2-group t-test
-t.test(y~x) # where y is numeric and x is a binary factor
-
-# independent 2-group t-test
-t.test(y1,y2) # where y1 and y2 are numeric
-
-# paired t-test
-t.test(y1,y2,paired=TRUE) # where y1 & y2 are numeric
-
-# one sample t-test
-t.test(y,mu=3) # Ho: mu=3
+# Logistic Regression
+# where F is a binary factor and
+# x1-x3 are continuous predictors
+fit <- glm(F~x1+x2+x3,data=mydata,family=binomial())
+summary(fit) # display results
+confint(fit) # 95% CI for the coefficients
+exp(coef(fit)) # exponentiated coefficients
+exp(confint(fit)) # 95% CI for exponentiated coefficients
+predict(fit, type="response") # predicted values
+residuals(fit, type="deviance") # residuals
 ```
 
-var.equal = TRUE 옵션을 사용하면 equal variances and a pooled variance estimate 를 설정할 수 있습니다. alternative="less" or alternative="greater" 옵션을 사용하여 one tailed test 를 실시할 수 있습니다.
-
-Nonparametric and resampling alternatives 또한 사용할 수 있습니다.
-
-## 결과 시각화 (Visualizing Results)
-
-그룹간의 차이를 시각화하기 위하여 box plots 이나 density plots 을 사용합니다.
+`anova(fit1,fit2, test="Chisq")` 함수를 사용하여 nested model 비교를 할 수 있습니다. `cdplot(F~x, data=mydata)` 함수를 사용하면 conditional density plot 을 그릴 수 있습니다.
