--- a/_posts/2018-02-02-KERAS.md
+++ b/_posts/2018-02-02-KERAS.md
@@ -12,5 +12,6 @@ headerImage: true
 ---
 
 ```
-C:\> conda install -c anaconda keras-gpu
+C:\> activate MYENV
+(MYENV) C:\> conda install -c anaconda keras-gpu
 ```
