--- a/_posts/2018-02-02-KERAS.md
+++ b/_posts/2018-02-02-KERAS.md
@@ -15,3 +15,10 @@ headerImage: true
 C:\> activate MYENV
 (MYENV) C:\> conda install -c anaconda keras-gpu
 ```
+https://gist.github.com/mrry/ee5dbcfdd045fa48a27d56664411d41c
+
+tensorflow_self_check.py
+
+
+nvidia cudal-toolkit 설치가 필요하다 
+https://developer.nvidia.com/cuda-toolkit
