--- a/_posts/2018-02-02-KERAS.md
+++ b/_posts/2018-02-02-KERAS.md
@@ -20,5 +20,12 @@ https://gist.github.com/mrry/ee5dbcfdd045fa48a27d56664411d41c
 tensorflow_self_check.py
 
 
-nvidia cudal-toolkit 설치가 필요하다 
+nvidia cudal-toolkit 설치가 필요하다
 https://developer.nvidia.com/cuda-toolkit
+
+내 PC > 속성 > 고급 시스템 설정 > 환경변수 > 시스템 변수
+%Path%
+Path variables
+C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.0\bin
+C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.0\libnvvp
+C:\Program Files\cuda\bin
