--- a/_posts/2018-02-02-KERAS.md
+++ b/_posts/2018-02-02-KERAS.md
@@ -11,17 +11,24 @@ headerImage: true
 
 ---
 
+참고자료
+- [코딩셰프의 3분 딥러닝, 케라스맛](https://github.com/jskdr/keraspp)
+-
+
 ```
 C:\> activate MYENV
 (MYENV) C:\> conda install -c anaconda keras-gpu
+(MYENV) C:\> jupyter notebook
 ```
 https://gist.github.com/mrry/ee5dbcfdd045fa48a27d56664411d41c
 
 tensorflow_self_check.py
 
 
-nvidia cudal-toolkit 설치가 필요하다
+nvidia cuda-toolkit 설치가 필요하다
 https://developer.nvidia.com/cuda-toolkit
+
+cuDNN v6 or v6.1 을 다운받아 Program Files 폴더 안에 cuda 폴더에 넣는다
 
 내 PC > 속성 > 고급 시스템 설정 > 환경변수 > 시스템 변수
 %Path%
@@ -29,3 +36,9 @@ Path variables
 C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.0\bin
 C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.0\libnvvp
 C:\Program Files\cuda\bin
+
+
+
+
+
+lstm time series prediction 구글링 필요
